@@ -1,43 +1,62 @@
 package com.ramiro.sigat.services;
 
-import com.ramiro.sigat.models.*;
-import com.ramiro.sigat.repositories.*;
-import com.ramiro.sigat.dto.*;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.ramiro.sigat.dto.IMEIDTO;
+import com.ramiro.sigat.models.Cliente;
+import com.ramiro.sigat.models.Compra;
+import com.ramiro.sigat.models.IMEI;
+import com.ramiro.sigat.models.Producto;
+import com.ramiro.sigat.models.Proveedor;
+import com.ramiro.sigat.models.Venta;
+import com.ramiro.sigat.repositories.IMEIRepository;
+import com.ramiro.sigat.repositories.ProductoRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.util.*;
+
+import java.time.LocalDateTime;
+import java.util.List;
+import java.util.Optional;
 import java.util.concurrent.ThreadLocalRandom;
-import java.util.stream.Collectors;
+
 @Service
 public class IMEIService {
-    @Autowired
-    private IMEIRepository imeiRepository;
-    @Autowired
-    private ProductoRepository productoRepository;
+    private final IMEIRepository imeiRepository;
+    private final ProductoRepository productoRepository;
+
+    public IMEIService(IMEIRepository imeiRepository, ProductoRepository productoRepository) {
+        this.imeiRepository = imeiRepository;
+        this.productoRepository = productoRepository;
+    }
+
+    @Transactional
     public IMEIDTO crearIMEI(IMEIDTO dto) {
         if (imeiRepository.findByNumero(dto.getNumero()).isPresent()) {
             throw new RuntimeException("IMEI ya existe");
         }
+
+        Producto producto = productoRepository.findById(dto.getProductoId())
+                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
+
         IMEI imei = new IMEI();
         imei.setNumero(dto.getNumero());
         imei.setEstado(IMEI.EstadoIMEI.EN_STOCK);
-        Producto producto = productoRepository.findById(dto.getProductoId())
-                .orElseThrow(() -> new RuntimeException("Producto no encontrado"));
         imei.setProducto(producto);
-        imei = imeiRepository.save(imei);
-        return convertirADTO(imei);
+        return convertirADTO(imeiRepository.save(imei));
     }
+
+    @Transactional(readOnly = true)
     public IMEIDTO obtenerPorId(Long id) {
         IMEI imei = imeiRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("IMEI no encontrado"));
         return convertirADTO(imei);
     }
+
+    @Transactional(readOnly = true)
     public IMEIDTO obtenerPorNumero(String numero) {
         IMEI imei = imeiRepository.findByNumero(numero)
                 .orElseThrow(() -> new RuntimeException("IMEI no encontrado"));
         return convertirADTO(imei);
     }
+
     @Transactional
     public List<IMEIDTO> listarPorProducto(Long productoId) {
         Producto producto = productoRepository.findById(productoId)
@@ -45,40 +64,45 @@ public class IMEIService {
         generarImeisFaltantes(producto);
         return imeiRepository.findByProductoId(productoId).stream()
                 .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
     }
+
     @Transactional
     public List<IMEIDTO> listarEnStock() {
         productoRepository.findAll().forEach(this::generarImeisFaltantes);
         return imeiRepository.findByEstado(IMEI.EstadoIMEI.EN_STOCK).stream()
                 .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Transactional(readOnly = true)
     public List<IMEIDTO> listarPorEstado(String estado) {
         IMEI.EstadoIMEI estadoEnum = IMEI.EstadoIMEI.valueOf(estado);
         return imeiRepository.findByEstado(estadoEnum).stream()
                 .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Transactional
     public IMEIDTO marcarVendido(Long id, Long clienteId) {
         IMEI imei = imeiRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("IMEI no encontrado"));
         imei.setEstado(IMEI.EstadoIMEI.VENDIDO);
         imei.setClienteId(clienteId);
-        imei.setFechaVenta(java.time.LocalDateTime.now());
-        imei = imeiRepository.save(imei);
-        return convertirADTO(imei);
+        imei.setFechaVenta(LocalDateTime.now());
+        return convertirADTO(imeiRepository.save(imei));
     }
+
     private void generarImeisFaltantes(Producto producto) {
         int stockActual = Optional.ofNullable(producto.getStockActual()).orElse(0);
         if (stockActual <= 0) {
             return;
         }
 
-        long imeisEnStock = imeiRepository.findByProductoId(producto.getId()).stream()
-                .filter(imei -> imei.getEstado() == IMEI.EstadoIMEI.EN_STOCK)
-                .count();
-        int faltantes = stockActual - (int) imeisEnStock;
+        int imeisEnStock = imeiRepository
+                .findByProductoIdAndEstado(producto.getId(), IMEI.EstadoIMEI.EN_STOCK)
+                .size();
+        int faltantes = stockActual - imeisEnStock;
 
         for (int i = 0; i < faltantes; i++) {
             IMEI imei = new IMEI();
