@@ -1,19 +1,27 @@
 package com.ramiro.sigat.services;
-import com.ramiro.sigat.models.*;
-import com.ramiro.sigat.repositories.*;
-import com.ramiro.sigat.dto.*;
-import org.springframework.beans.factory.annotation.Autowired;
+
+import com.ramiro.sigat.dto.ProveedorDTO;
+import com.ramiro.sigat.models.Proveedor;
+import com.ramiro.sigat.repositories.ProveedorRepository;
 import org.springframework.stereotype.Service;
-import java.util.*;
-import java.util.stream.Collectors;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.List;
+
 @Service
 public class ProveedorService {
-    @Autowired
-    private ProveedorRepository proveedorRepository;
+    private final ProveedorRepository proveedorRepository;
+
+    public ProveedorService(ProveedorRepository proveedorRepository) {
+        this.proveedorRepository = proveedorRepository;
+    }
+
+    @Transactional
     public ProveedorDTO crearProveedor(ProveedorDTO dto) {
         if (proveedorRepository.findByRuc(dto.getRuc()).isPresent()) {
             throw new RuntimeException("Proveedor con este RUC ya existe");
         }
+
         Proveedor proveedor = new Proveedor();
         proveedor.setNombre(dto.getNombre());
         proveedor.setRuc(dto.getRuc());
@@ -22,24 +30,31 @@ public class ProveedorService {
         proveedor.setDireccion(dto.getDireccion());
         proveedor.setContacto(dto.getContacto());
         proveedor.setActivo(true);
-        proveedor = proveedorRepository.save(proveedor);
-        return convertirADTO(proveedor);
+        return convertirADTO(proveedorRepository.save(proveedor));
     }
+
+    @Transactional(readOnly = true)
     public ProveedorDTO obtenerPorId(Long id) {
         Proveedor proveedor = proveedorRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Proveedor no encontrado"));
         return convertirADTO(proveedor);
     }
+
+    @Transactional(readOnly = true)
     public List<ProveedorDTO> listarTodos() {
         return proveedorRepository.findAll().stream()
                 .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Transactional(readOnly = true)
     public List<ProveedorDTO> listarActivos() {
         return proveedorRepository.findByActivo(true).stream()
                 .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Transactional
     public ProveedorDTO actualizar(Long id, ProveedorDTO dto) {
         Proveedor proveedor = proveedorRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Proveedor no encontrado"));
@@ -48,15 +63,17 @@ public class ProveedorService {
         proveedor.setTelefono(dto.getTelefono());
         proveedor.setDireccion(dto.getDireccion());
         proveedor.setContacto(dto.getContacto());
-        proveedor = proveedorRepository.save(proveedor);
-        return convertirADTO(proveedor);
+        return convertirADTO(proveedorRepository.save(proveedor));
     }
+
+    @Transactional
     public void eliminar(Long id) {
         Proveedor proveedor = proveedorRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Proveedor no encontrado"));
         proveedor.setActivo(false);
         proveedorRepository.save(proveedor);
     }
+
     private ProveedorDTO convertirADTO(Proveedor proveedor) {
         return ProveedorDTO.builder()
                 .id(proveedor.getId())
