@@ -1,22 +1,36 @@
 package com.ramiro.sigat.services;
 
-import com.ramiro.sigat.models.*;
-import com.ramiro.sigat.repositories.*;
-import com.ramiro.sigat.dto.*;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.ramiro.sigat.dto.UsuarioDTO;
+import com.ramiro.sigat.models.Rol;
+import com.ramiro.sigat.models.Usuario;
+import com.ramiro.sigat.repositories.RolRepository;
+import com.ramiro.sigat.repositories.UsuarioRepository;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import java.util.*;
-import java.util.stream.Collectors;
+import org.springframework.transaction.annotation.Transactional;
+
+import java.util.List;
+
 @Service
 public class UsuarioService {
-    @Autowired
-    private UsuarioRepository usuarioRepository;
-    @Autowired
-    private RolRepository rolRepository;
-    @Autowired
-    private PasswordEncoder passwordEncoder;
+    private final UsuarioRepository usuarioRepository;
+    private final RolRepository rolRepository;
+    private final PasswordEncoder passwordEncoder;
+    private final RolService rolService;
 
+    public UsuarioService(
+            UsuarioRepository usuarioRepository,
+            RolRepository rolRepository,
+            PasswordEncoder passwordEncoder,
+            RolService rolService
+    ) {
+        this.usuarioRepository = usuarioRepository;
+        this.rolRepository = rolRepository;
+        this.passwordEncoder = passwordEncoder;
+        this.rolService = rolService;
+    }
+
+    @Transactional
     public UsuarioDTO crearUsuario(UsuarioDTO dto) {
         Usuario usuario = new Usuario();
         usuario.setEmail(dto.getEmail());
@@ -24,55 +38,82 @@ public class UsuarioService {
         usuario.setApellido(dto.getApellido());
         usuario.setPassword(passwordEncoder.encode(dto.getPassword()));
         usuario.setActivo(true);
+
         Rol rol = rolRepository.findById(dto.getRolId())
                 .orElseThrow(() -> new RuntimeException("Rol no encontrado"));
+        validarRolPermitido(rol);
         usuario.setRol(rol);
-        usuario = usuarioRepository.save(usuario);
-        return convertirADTO(usuario);
+
+        return convertirADTO(usuarioRepository.saveAndFlush(usuario));
     }
+
+    @Transactional(readOnly = true)
     public UsuarioDTO obtenerPorId(Long id) {
         Usuario usuario = usuarioRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
         return convertirADTO(usuario);
     }
+
+    @Transactional(readOnly = true)
     public UsuarioDTO obtenerPorEmail(String email) {
         Usuario usuario = usuarioRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
         return convertirADTO(usuario);
     }
+
+    @Transactional(readOnly = true)
     public List<UsuarioDTO> listarTodos() {
         return usuarioRepository.findAll().stream()
                 .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Transactional(readOnly = true)
     public List<UsuarioDTO> listarActivos() {
         return usuarioRepository.findByActivo(true).stream()
                 .map(this::convertirADTO)
-                .collect(Collectors.toList());
+                .toList();
     }
+
+    @Transactional
     public UsuarioDTO actualizar(Long id, UsuarioDTO dto) {
         Usuario usuario = usuarioRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
         usuario.setNombre(dto.getNombre());
         usuario.setApellido(dto.getApellido());
         usuario.setEmail(dto.getEmail());
+
+        if (dto.getPassword() != null && !dto.getPassword().isBlank()) {
+            usuario.setPassword(passwordEncoder.encode(dto.getPassword()));
+        }
+
         if (dto.getRolId() != null) {
             Rol rol = rolRepository.findById(dto.getRolId())
                     .orElseThrow(() -> new RuntimeException("Rol no encontrado"));
+            validarRolPermitido(rol);
             usuario.setRol(rol);
         }
-        usuario = usuarioRepository.save(usuario);
-        return convertirADTO(usuario);
+
+        return convertirADTO(usuarioRepository.saveAndFlush(usuario));
     }
+
+    @Transactional
     public void eliminar(Long id) {
         Usuario usuario = usuarioRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Usuario no encontrado"));
         usuario.setActivo(false);
         usuarioRepository.save(usuario);
     }
+
     public boolean validarPassword(String rawPassword, String encodedPassword) {
         return passwordEncoder.matches(rawPassword, encodedPassword);
     }
+
+    @Transactional(readOnly = true)
+    public Usuario obtenerUsuarioPorEmail(String email) {
+        return usuarioRepository.findByEmail(email).orElse(null);
+    }
+
     private UsuarioDTO convertirADTO(Usuario usuario) {
         return UsuarioDTO.builder()
                 .id(usuario.getId())
@@ -80,12 +121,14 @@ public class UsuarioService {
                 .nombre(usuario.getNombre())
                 .apellido(usuario.getApellido())
                 .rolId(usuario.getRol().getId())
-                .rolNombre(usuario.getRol().getNombre())
+                .rolNombre(rolService.normalizarNombreRol(usuario.getRol().getNombre()))
                 .activo(usuario.getActivo())
                 .build();
     }
-    public Usuario obtenerUsuarioPorEmail(String email) {
-        return usuarioRepository.findByEmail(email)
-                .orElse(null);
+
+    private void validarRolPermitido(Rol rol) {
+        if (!rolService.esRolPermitido(rol)) {
+            throw new RuntimeException("Solo se permiten los roles ADMIN y TRABAJADOR");
+        }
     }
 }
